assets/style/main.css
html, body
{
	height: 100%;
	margin: 0px;
	padding: 0px;
	overflow: hidden;
}

span
{
	margin: 2px 5px;
	font-family: verdana;
	font-size: 12px;
	color: #ffffff;
}

hr
{
	border-top: 1px solid #262626;
	border-bottom: 1px solid #808080;
}

button, select, input, textarea
{
	width: 240px;
	padding: 2px;
	margin: 2px 5px;
	font-family: verdana;
	font-size: 12px;
	font-weight: bold;
	color: #ffffff;
	background-color: #3a3a3a;
	border: 1px solid #292929;
	box-sizing: border-box;
}

button
{
	background-image: linear-gradient(#757575, #6c6c6c, #626262);
	border-radius: 5px;
	cursor: pointer;
}

button:hover
{
	background-image: linear-gradient(#3f3f3f, #3c3c3c, #373737);
}

input.textBoxLeft
{
	width: 118px;
	margin-right: 0px;
}

input.textBoxRight
{
	width: 118px;
	margin-left: 4px;
}

input.textBoxColor
{
	float: left;
	width: 219px;
	margin-right: 0px;
	border-right: 0px;
}

input.textBoxColor:focus + *
{
	outline: none !important;
	border: 1px solid #919191;
	border-left: 0px;
	box-shadow: 0 0 2px #919191;
}

input[type=color]
{
	width: 21px;
	height: 21px;
	padding: 5px;
	margin-left: 0px;
	background-image: linear-gradient(#757575, #6c6c6c, #626262);
	border-left: 0px;
	border-radius: 0px 5px 5px 0px;
	cursor: pointer;
}

input[type=checkbox]
{
	width: 14px;
	margin-right: 0px;
}

textarea
{
	width: 480px;
	height: 100px;
}

input:focus, textarea:focus
{
	outline: none !important;
	border: 1px solid #919191;
	box-shadow: 0 0 2px #919191;
}

canvas
{
	display: block;
	position: absolute;
}

#main
{
	display: table;
	width: 100%;
	height: 100%;
}

#tabs
{
	display: table-cell;
	position: relative;
	width: 76px;
	background-color: #535353;
	border-left: 1px solid #262626;
	border-right: 1px solid #808080;
}

#tabs .addProjectTab
{
	width: 64px;
	height: 64px;
	margin: 5px;
	background-image: url(../images/add.png);
	background-repeat: no-repeat;
	background-size: 56px 56px;
	background-position: center center;
	border: 1px solid #535353;
	cursor: pointer;
}

#tabs .addProjectTab:hover
{
	background-color: #3a3a3a;
	border: 1px solid #292929;
}

#tabs .projectTab
{
	width: 64px;
	height: 64px;
	margin: 0px 5px 5px 5px;
	background-color: #3a3a3a;
	border: 1px solid #292929;
	cursor: pointer;
}

#tabs .projectTab:hover
{
	border: 1px solid #6d6d6d;
	box-shadow: 0 0 2px #6d6d6d;
}

#tabs .currentProjectTab
{
	background-color: #3a3a3a;
	border: 1px solid #808080;
	box-shadow: 0 0 2px #808080;
}

#controls
{
	display: table-cell;
	position: relative;
	width: 250px;
	background-color: #535353;
	border-left: 1px solid #262626;
	border-right: 1px solid #808080;
}

#screen
{
	display: table-cell;
	position: relative;
	background-color: #262626;
	border-left: 1px solid #262626;
	border-right: 1px solid #808080;
}

.textDrawList
{
	width: 240px;
	height: 126px;
	margin: 2px 5px;
	background-color: #3a3a3a;
	border: 1px solid #292929;
	box-sizing: border-box;
	overflow-x: hidden;
	overflow-y: scroll;
}

.textDrawItem
{
	position: relative;
	width: 100%;
	height: 25px;
	border-bottom: 1px solid #292929;
	box-sizing: border-box;
	cursor: pointer;
	user-select: none;
}

.textDrawItem:hover
{
	background-color: #6d6d6d;
}

.textDrawItem canvas, .textDrawItem img
{
	display: block;
	position: absolute;
	height: 24px;
	border-right: 1px solid #292929;
	cursor: move;
	user-select: none;
}

.textDrawItem span
{
	margin-left: 32px;
	white-space: nowrap;
}

.textDrawItem span:first-child
{
	margin-left: 2px;
}

.currentTextDrawItem, .currentTextDrawItem:hover
{
	background-color: #808080;
}

.lastTextDrawItem
{
	border-bottom: none;
}

.textDrawItem .visibility
{
	display: inline-block;
	position: absolute;
	right: 0px;
	width: 24px;
	height: 24px;
	background-color: #3a3a3a;
	background-image: url(../images/visibility.png);
	background-repeat: no-repeat;
	background-position: 0px 0px;
	user-select: none;
}

.textDrawItem .visibility:hover
{
	background-position-x: -24px;
}

.textDrawItem:hover .visibility
{
	background-color: #6d6d6d;
}

.currentTextDrawItem .visibility, .currentTextDrawItem:hover .visibility
{
	background-color: #808080;
}

.textureList
{
	width: 440px;
	height: 140px;
	overflow-y: scroll;
	overflow-x: hidden;
}

.textureItem
{
	display: inline-block;
	margin: 2px;
	background-color: #3a3a3a;
	border: 1px solid #292929;
	font-size: 0px;
}

.textureItem:hover
{
	background-color: #6d6d6d;
}

.contextMenu
{ 
	position: absolute;
	min-width: 120px;
	background-color: #F0F0F0;
	border: 1px solid #A0A0A0;
	z-index: 999;
	user-select: none;
}

.contextMenu .contextItem
{
	position: relative;
	margin: 2px;
	padding: 5px 20px;
	background-repeat: no-repeat;
	background-size: 16px;
	background-position: 2px 3px;
	font-family: arial;
	font-size: 10px;
	color: #000000;
	cursor: pointer;
}

.contextMenu .contextItem:hover
{
	background-color: #3399FF;
}

.contextMenu .contextItemDisabled
{
	color: #6d6d6d;
}

.contextMenu .contextItemDisabled:hover
{
	background-color: #F0F0F0;
}

.contextMenu .contextItem .contextMenu
{
	display: none;
}

.contextMenu .contextItem:hover .contextMenu
{
	display: block;
}

.contextMenu hr
{
	margin: 0px;
	border-left: 0px;
	border-right: 0px;
	border-top: 1px solid #A0A0A0;
	border-bottom: 1px solid #FFFFFF;
}

.dialog
{
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	background-color: #535353;
	border: 1px solid #282828;
	border-radius: 5px;
}

.dialog .dialogTitleBar
{
	height: 21px;
	line-height: 21px;
	font-family: verdana;
	font-size: 10px;
	font-weight: bold;
	text-align: center;
	color: #ffffff;
	background-image: linear-gradient(#393939, #353535, #323232);
	border-top: 1px solid #474747;
	border-bottom: 1px solid #282828;
	cursor: move;
	user-select: none;
}

.dialog .dialogContent
{
	padding: 5px;
	padding-bottom: 0px;
	border-top: #6a6a6a solid 1px;
}

.dialog .dialogButtons
{
	padding: 5px;
	padding-top: 0px;
	text-align: center;
}

.dialog .dialogButtons button
{
	width: 100px;
}

.scrollable
{
	position: absolute;
	left: 0;
	top:  0;
	right: 0;
	bottom: 0;
	overflow-y: auto;
}

.scrollable.scrollbarThin
{
	scrollbar-width: thin;
}

.resizable
{
	resize: both;
}

.spacing
{
	height: 4px;
}

.scrollable.scrollbarThin::-webkit-scrollbar
{
	width: 8px;
	height: 8px;
	background-color: #404040;
}

.scrollable.scrollbarThin::-webkit-scrollbar-corner
{
	background-color: #404040;
}

.scrollable.scrollbarThin::-webkit-scrollbar-thumb
{
	background: #8a8a8a;
	border: 1px solid #404040;
}

::-webkit-scrollbar
{
	width: 15px;
	height: 15px;
	background-color: #212121;
}

::-webkit-scrollbar-corner
{
	background-color: #212121;
}

::-webkit-scrollbar-thumb
{
	background: #787878;
	border: 1px solid #212121;
}

